Feature 06: Evoluindo a API
- Implementação API externa da NASA para corposCeleste
- Refatoração para adicionar os DTOs
- Configuração inicial do docker-compose
- Utilização do db `postgres` e remoção do h2
- Mudança de algumas configurações
- Readme inicial

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
 spring.application.name=stellarindexapi
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=vinicius
-spring.datasource.password=vinicius
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/stellarindexdb
+spring.datasource.username=stellarindex
+spring.datasource.password=stellarindex123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# NASA API
+api.nasa.base-url=https://ssd-api.jpl.nasa.gov/
+api.nasa.api-key=BV0LVbfbGQpsDWfAxadLJRYt0XuHGaoA6Cdoqqz7
 
-viniciusviannaapi.url=http://localhost:1044/api/nasa
+# Docker Compose Configuration
+# spring.docker.compose.file=docker/docker-compose.yml
