--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,10 @@ spring.jpa.defer-datasource-initialization=true
 api.nasa.base-url=https://ssd-api.jpl.nasa.gov/
 api.nasa.api-key=BV0LVbfbGQpsDWfAxadLJRYt0XuHGaoA6Cdoqqz7
 
-# Docker Compose Configuration
-# spring.docker.compose.file=docker/docker-compose.yml
+
+# Elasticsearch Configuration
+spring.elasticsearch.rest.uris=http://localhost:9200
+
+# Actuator
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
