--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     networks:
       - stellarindex-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U stellarindex"]
+      test: ["CMD-SHELL", "pg_isready -U stellarindex -d stellarindexdb"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -68,7 +68,6 @@ services:
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - LS_JAVA_OPTS=-Xmx256m -Xms256m
-      - LOGSTASH_INTERNAL_PASSWORD=changeme
     command: logstash -f /usr/share/logstash/pipeline/estrelas.conf --config.reload.automatic
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:9600/_node/stats || exit 1"]
@@ -105,6 +104,24 @@ services:
       timeout: 10s
       retries: 5
       start_period: 60s
+  
+  frontend:
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
+    container_name: stellarindex-frontend
+    ports:
+      - "3000:3000"
+    environment:
+      - NEXT_PUBLIC_API_URL=http://localhost:8080/api
+    networks:
+      - stellarindex-network
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
       
 volumes:
   postgres_data:
